--- a/src/Makefile
+++ b/src/Makefile
@@ -6,7 +6,7 @@ INC_PARAMS=$(DEPSFOLDER:%=-I%)
 
 all: main matrix bmp random steganography app 
 
-fromzero: clean all ; ./app –d –s "../Archivos de Prueba-4-8/Secreto.bmp" –m "../Archivos de Prueba-4-8/Marca.bmp" –k 4 –n 8 –i "../Archivos de Prueba-4-8/shares"
+fromzero: clean all ; ./app -d -s "../try/Secreto.bmp" -m "../try/Marca.bmp" -k 4 -n 8 -i "../try/shares"
 
 main:
 	cd main; make all
@@ -33,6 +33,5 @@ clean:
 	cd steganography; make clean
 	cd random; make clean
 	cd bmp; make clean
-	rm app
 
 .PHONY: all clean fromzero bmp random main steganography matrix app
